--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&family=Open+Sans:wght@400;700&display=swap');
+// font-family: 'Montserrat', sans-serif;
+// font-family: 'Open Sans', sans-serif;
 .body {
     background-color:black;
 
