added more to products

--- a/src/style/Products.scss
+++ b/src/style/Products.scss
@@ -7,7 +7,15 @@
         font-family: 'Open Sans', sans-serif;
         font-weight: 700;
         font-size: 20px;
-        border-bottom: 2px dashed red;
+        border-bottom: 2px solid red;
+    }
+    
+}
+.card-body{
+    p{
+        color: yellow;
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 700;
     }
 }
 
@@ -35,6 +43,9 @@
 }
 .blanket{
     grid-template-columns: 2fr 1fr 1fr;
+}
+.window{
+    grid-template-columns: 2fr 1fr 1fr 1fr;
 }
 
 .image-grid{
@@ -72,4 +83,10 @@
         width: 40%;
         margin: 15px auto;
     }
+}
+
+.sub-accordion{
+    margin: 10px;
+    border: 2px solid yellow;
+    padding-bottom: 5px;
 }
