--- a/src/style/Footer.scss
+++ b/src/style/Footer.scss
@@ -30,5 +30,6 @@
         font-family: 'Open Sans', sans-serif;
         grid-column: 1/3;
         text-align: center;
+        font-size: 12px;
     }
 }
