--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&family=Open+Sans:wght@400;700&display=swap');
 .home {
     padding-top: 15px;
     h1{
