--- a/src/style/Footer.scss
+++ b/src/style/Footer.scss
@@ -4,32 +4,16 @@
 
 .footer{
     color: white;
-    display: grid;
-    grid-template-columns: 1fr 2fr;
     border-top: 3px solid yellow;
-
-    img{
-        width: 90%;
-        grid-column: 1/2;
-        margin: auto;
-    }
-    nav{
-        display: flex;
-        div{
-            display: flex;
-            flex-direction: column;
-            padding: 5px;
-            margin: auto;
-            a{
-                font-family: 'Montserrat', sans-serif;
-                font-weight: 800;
-            }
-        }
-    }
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    
     p{
         font-family: 'Open Sans', sans-serif;
         grid-column: 1/3;
         text-align: center;
         font-size: 12px;
+        padding-top: 20px;
     }
 }
