--- a/src/style/Recert.scss
+++ b/src/style/Recert.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&family=Open+Sans:wght@400;700&display=swap');
 .recert {
+    padding-bottom: 130px;
     
-
     h1{
         font-family: 'Montserrat', sans-serif;
         font-size: 20px;
