--- a/src/style/Contact.scss
+++ b/src/style/Contact.scss
@@ -4,9 +4,10 @@
     h1{
         color: white;
         font-family: 'Montserrat', sans-serif;
-        font-size: 22px;
+        font-size: 18px;
         text-align: center;
         margin-top: 15px;
+        padding: 2px;
     }
     h1:nth-of-type(2){
         color: yellow;
