--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -20,18 +20,33 @@
             padding: 20px;
             margin: 40px 20px;
             box-shadow: 0px 0px 20px 5px rgba(255, 255, 255, 0.8);
+            display: flex;
+            flex-direction: row;
 
-            h1{
-                color: white;
-                font-size: 22px;
-                text-align: left;
-                font-weight: 400;
+            img{
+                width: 40%;
             }
-            p{
-                color: red;
+
+            div{
+                border:none;
+                display: block;
+                box-shadow: none;
+                padding: 0;
                 margin: 0;
-                font-size: 18px;
-                font-family: 'Open Sans', sans-serif;
+                padding-left: 15px;
+                
+                h1{
+                    color: white;
+                    font-size: 16px;
+                    text-align: left;
+                    font-weight: 400;
+                }
+                p{
+                    color: red;
+                    margin: 0;
+                    font-size: 14px;
+                    font-family: 'Open Sans', sans-serif;
+                }
             }
 
         }
