--- a/src/style/Support.scss
+++ b/src/style/Support.scss
@@ -1,27 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&family=Open+Sans:wght@400;700&display=swap');
-.recert {
+
+.support{
     padding-bottom: 130px;
-    
+
+    img{
+        display: block;
+        width: 90%;
+        margin: 25px auto;
+    }
+
     h1{
         font-family: 'Montserrat', sans-serif;
-        font-size: 20px;
-        color: white;
-        text-align: center;
-        margin-top: 40px;
-    }
-    h1:nth-of-type(2){
-        color: yellow;
         font-size: 24px;
-        font-weight: bold;
-    }
-    p{
-        color: white;
         text-align: center;
+        color: white;
     }
-    span{
-        color: yellow;
-    }
-    
+
     .card{
         margin: 20px;
         border-radius: 15px;
@@ -38,17 +32,20 @@
             h3{
                 font-size: 22px;
             }
-            p{
-                text-align: left;
-            }
-            div{
-                p{
-                    margin: 0;
-                    font-family: 'Open Sans', sans-serif;
-                
-                }
-                margin-bottom: 10px;
-            }
         }
+    }
+    button{
+        border-radius: 10px;
+        background-color: yellow;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: bold;
+        display: block;
+        margin: 0 auto;
+    }
+    h3{
+        font-family: 'Montserrat', sans-serif;
+        color: white;
+        text-align: center;
+        padding-top: 20px;
     }
 }
