--- a/src/style/About.scss
+++ b/src/style/About.scss
@@ -7,6 +7,9 @@
         text-align: center;
         margin: 20px;
         font-family: 'Montserrat', sans-serif;
+        @media (min-width: 768px){
+            font-size: 36px;
+        }
     
         span{
             color: yellow;
@@ -17,11 +20,17 @@
         border-top: 4px solid yellow;
         border-left: 2px solid yellow;
         margin-left: 20px;
+        @media (min-width: 768px){
+            margin-left: 40px;
+        }
         p{
             color: white;
             font-size: 16px;
             margin: 15px;
             font-family: 'Open Sans', sans-serif;
+            @media (min-width: 768px){
+                font-size: 28px;
+            }
         }
         span{
             color: yellow;
@@ -35,13 +44,48 @@
         margin: 20px;
         border-radius: 15px;
         padding: 20px;
-        h1{
-            text-align: left;
-            margin: 0;
+        
+        @media (min-width: 768px){
+            margin-left: 40px;
+            display: flex;
         }
-        p{
-            margin: 0;
+        img{
+            width: 100px;
+            display: block;
+            margin: 10px auto;
+            @media (min-width: 768px){
+                width: 200px;
+            }
             
+        }
+        div{
+            border: none;
+            @media (min-width: 768px){
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+            }
+            h1{
+                text-align: left;
+                margin: 0;
+                color: yellow;
+                font-weight: bold;
+                // justify-self: flex-end;
+                @media (min-width: 768px){
+                    font-size: 28px;
+
+                }
+
+            }
+            p{
+                margin: 0;
+                @media (min-width: 768px){
+                    font-size: 20px;
+                    
+                }
+                // justify-self: flex-end;
+
+            }
         }
     }
 }
