--- a/src/style/Contact.scss
+++ b/src/style/Contact.scss
@@ -8,6 +8,9 @@
         text-align: center;
         margin-top: 15px;
         padding: 2px;
+        @media (min-width: 768px){
+            font-size: 28px;
+        }
     }
     h1:nth-of-type(2){
         color: yellow;
@@ -40,13 +43,19 @@
             display: flex;
             flex-direction: row;
             justify-content: space-around;
+            margin: 0;
             margin-top: 15px;
+            
             div{
                 margin: 0;
                 
                 h3{
                     color: yellow;
                     font-size: 16px;
+                    @media (min-width: 768px){
+                        font-size: 24px;
+                        text-align: center;
+                    }
                 }
                 p{
                     font-weight: 400;
@@ -54,6 +63,9 @@
                     font-size: 14px;
                     margin: 0;
                     font-family: 'Open Sans', sans-serif;
+                    @media (min-width: 768px){
+                        font-size: 20px;
+                    }
                 }
             }
         }
@@ -63,15 +75,24 @@
         font-weight: bold;
         width: 90%;
         margin: 10px auto;
+        @media (min-width: 768px){
+            font-size: 24px;
+            text-align: center;
+        }
     }
     .hours{
         display: flex;
         flex-direction: row;
+        width: 400px;
         ul{
-
+            margin: 0 auto;
+            width: 200px;
             li{
                 list-style-type: none;
                 color: white;
+                @media (min-width: 768px){
+                    font-size: 24px;
+                }
             }
         }
     }
