--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -22,9 +22,15 @@
             box-shadow: 0px 0px 20px 5px rgba(255, 255, 255, 0.8);
             display: flex;
             flex-direction: row;
+            @media (min-width: 768px) {
+                
+            }
 
             img{
                 width: 40%;
+                @media (min-width: 768px) {
+                    width: 200px;
+                }
             }
 
             div{
@@ -51,5 +57,115 @@
 
         }
     }
-    
+    @media (min-width: 768px) {
+        padding: 30px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: .15fr .5fr .5fr .5fr .25fr;
+        gap: 20px;
+
+        h1{
+            grid-row: 1/2;
+            grid-column: 1/3;
+            font-size: 48px;
+            @media(min-width: 1024px){
+                font-size: 78px;
+            }
+        }
+
+        a{
+            
+            div{
+                width: 100%;
+                height: 100%;
+                margin: 0;
+                display: flex;
+                justify-content: center;
+                // align-items: center;
+                svg{
+                    align-self: center;
+                }
+                div{
+                    display: flex;
+                    // justify-content: center;
+                    flex-direction: column;
+                    h1{
+                        font-size: 24px;
+                    }
+                    p{
+                        font-size: 18px;
+                    }
+                }
+                
+            }
+        }
+
+        #one{
+            grid-column: 1/2;
+            grid-row: 2/4;
+            height: 100%;
+            display: flex;
+            position: relative;
+            
+            
+            div{
+                // font-size: 36px;
+                order: 1;
+                svg{
+                    order: 2;
+                    align-self: flex-end;
+                    position: absolute;
+                    right: 15%;
+                    bottom: 10%;
+                   
+                }
+                div{
+                    display: flex;
+                    h1{
+                        font-size: 38px;
+                    }
+                    p{
+                        font-size: 26px;
+                        padding-right: 10px;
+                        width: 70%;
+                    }
+                }
+            }
+            
+        }
+
+        #two{
+            grid-column: 2/3;
+            grid-row: 2/3;
+            height: 100%;
+            display: flex;
+            
+        }
+
+        #three{
+            grid-column: 2/3;
+            grid-row: 3/4;
+            height: 100%;
+            display: flex;
+            width: 100%;
+        }
+
+        #four{
+            grid-column: 1/3;
+            grid-row: 4/5;
+            height: 100%;
+            display: flex;
+            width: 100%;
+            div{
+                img{
+                    width: 100px;
+                }
+                div{
+                    h1{
+                        font-size: 56px;
+                    }
+                }
+            }
+        }
+    }
 }
