--- a/src/style/Recert.scss
+++ b/src/style/Recert.scss
@@ -7,16 +7,27 @@
         font-size: 20px;
         color: white;
         text-align: center;
-        margin-top: 40px;
+        margin-top: 30px;
+        @media (min-width: 768px){
+            font-size: 28px;
+        }
+
     }
     h1:nth-of-type(2){
         color: yellow;
         font-size: 24px;
         font-weight: bold;
+        @media (min-width: 768px){
+            font-size: 28px;
+            margin-top: 10px;
+        }
     }
     p{
         color: white;
         text-align: center;
+        @media (min-width: 768px){
+            font-size: 20px;
+        }
     }
     span{
         color: yellow;
@@ -25,6 +36,9 @@
     .card{
         margin: 20px;
         border-radius: 15px;
+        @media (min-width: 768px){
+            font-size: 28px;
+        }
         .card-header{
             background-color: yellow;
             font-weight: bold;
