--- a/src/style/Contact.scss
+++ b/src/style/Contact.scss
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&family=Open+Sans:wght@400;700&display=swap');
 .contact{
+    position: relative;
+    margin: 0 auto;
+    @media (min-width: 1024px){
+        max-width: 1300px;
+        display: block;
+        margin: 0 auto;
+    }
     padding-bottom: 130px;
     h1{
         color: white;
@@ -20,11 +27,33 @@
     div{
         width: 90%;
         margin: 0 auto;
+        @media (min-width: 1024px){
+            position: relative;
+        }
         img{
             display: block;
             margin: 0 auto;
             width: 100%;
             margin-bottom: 10px;
+            @media (min-width: 1024px){
+                max-width: 50%;
+                display: inline;
+                margin: 0;
+            }
+        }
+        .info{
+            @media (min-width: 1024px){
+                width: 400px;
+                position: absolute;
+                &:first-of-type{
+                    right: 5%;
+                    top: 0;
+                }
+                &:nth-of-type(2){
+                    right: 5%;
+                    top: 25px;
+                }
+            }
         }
         h3{
             color: white;
@@ -65,6 +94,7 @@
                     font-family: 'Open Sans', sans-serif;
                     @media (min-width: 768px){
                         font-size: 20px;
+                        margin: 0 auto;
                     }
                 }
             }
@@ -80,18 +110,50 @@
             text-align: center;
         }
     }
+
+    @media (min-width: 1024px) {
+        .hours-list{
+            position: absolute;
+            
+            &:first-of-type{
+                top: 20%;
+                left: 55%;
+                width: 300px;
+            }
+            &:nth-of-type(2){
+                top: 27%;
+                left: 55%;
+            }
+        }
+    }
     .hours{
         display: flex;
         flex-direction: row;
-        width: 400px;
+        width: 300px;
+
         ul{
             margin: 0 auto;
             width: 200px;
+            padding: 0;
+            width: 120px;
+            margin: 5px;
+            @media (min-width: 1024px){
+                padding: 0;
+                width: 110px;
+                margin: 5px;
+            }
+            @media (min-width: 768px){
+                width: 200px;
+                text-align: center;
+            }
             li{
                 list-style-type: none;
                 color: white;
                 @media (min-width: 768px){
                     font-size: 24px;
+                }
+                @media (min-width: 1024px){
+                    font-size: 18px;
                 }
             }
         }
