--- a/src/style/About.scss
+++ b/src/style/About.scss
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&family=Open+Sans:wght@400;700&display=swap');
+.react-reveal{
+    border-top: none;
+}
 .about{
+    @media (min-width: 1024px){
+        max-width: 1000px;
+        display: block;
+        margin: 0 auto;
+    }
     padding-bottom: 130px;
     h1{
         color: white;
