--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -1,7 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&family=Open+Sans:wght@400;700&display=swap');
+
+.links{
+    &:hover {
+        box-shadow: 0px 0px 30px 15px rgba(255, 255, 255, 0.8) !important;
+    }
+}
 .home {
     padding-top: 15px;
     padding-bottom: 130px;
+    @media (min-width: 1024px){
+        max-width: 1000px;
+        display: block;
+        margin: 0 auto;
+    }
+    
     h1{
         color: yellow;
         font-size: 22px;
@@ -13,24 +25,23 @@
             font-weight: 400;
         }
     }
+    
     a{
+        text-decoration: none;
+        
         div{
             border: 2px solid yellow;
             border-radius: 15px;
             padding: 20px;
             margin: 40px 20px;
-            box-shadow: 0px 0px 20px 5px rgba(255, 255, 255, 0.8);
+            // box-shadow: 0px 0px 20px 5px rgba(255, 255, 255, 0.8);
             display: flex;
             flex-direction: row;
-            @media (min-width: 768px) {
-                
-            }
+            
+           
 
             img{
-                width: 40%;
-                @media (min-width: 768px) {
-                    width: 200px;
-                }
+                width: 100px;
             }
 
             div{
@@ -69,7 +80,7 @@
             grid-column: 1/3;
             font-size: 48px;
             @media(min-width: 1024px){
-                font-size: 78px;
+                font-size: 72px;
             }
         }
 
@@ -159,10 +170,21 @@
             div{
                 img{
                     width: 100px;
+                    @media (min-width: 1024px) {
+                        width: 200px;
+                    }
                 }
                 div{
                     h1{
                         font-size: 56px;
+                        @media (min-width: 1024px) {
+                            font-size: 86px;
+                        }
+                    }
+                    p{
+                        @media (min-width: 1024px) {
+                            font-size: 36px;
+                        }
                     }
                 }
             }
