--- a/src/style/Recert.scss
+++ b/src/style/Recert.scss
@@ -1,7 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&family=Open+Sans:wght@400;700&display=swap');
 .recert {
     padding-bottom: 130px;
-    
+    @media (min-width: 1024px){
+        max-width: 1000px;
+        display: block;
+        margin: 0 auto;
+    }
     h1{
         font-family: 'Montserrat', sans-serif;
         font-size: 20px;
@@ -35,7 +39,7 @@
     
     .card{
         margin: 20px;
-        border-radius: 15px;
+        
         @media (min-width: 768px){
             font-size: 28px;
         }
