--- a/src/style/Support.scss
+++ b/src/style/Support.scss
@@ -2,7 +2,11 @@
 
 .support{
     padding-bottom: 130px;
-
+    @media (min-width: 1024px){
+        max-width: 1000px;
+        display: block;
+        margin: 0 auto;
+    }
     img{
         display: block;
         width: 90%;
@@ -21,7 +25,7 @@
 
     .card{
         margin: 20px;
-        border-radius: 15px;
+        
         @media (min-width: 768px){
             font-size: 28px;
         }
