--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -70,10 +70,7 @@
     }
     @media (min-width: 768px) {
         padding: 30px;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: .15fr .5fr .5fr .5fr .25fr;
-        gap: 20px;
+        
 
         h1{
             grid-row: 1/2;
@@ -83,7 +80,11 @@
                 font-size: 72px;
             }
         }
-
+    .home-container{
+        display: grid;
+        gap: 15px;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: .25fr .25fr .5fr .25fr;
         a{
             
             div{
@@ -110,10 +111,9 @@
                 
             }
         }
-
+    }
         #one{
-            grid-column: 1/2;
-            grid-row: 2/4;
+            
             height: 100%;
             display: flex;
             position: relative;
@@ -146,24 +146,21 @@
         }
 
         #two{
-            grid-column: 2/3;
-            grid-row: 2/3;
+            
             height: 100%;
             display: flex;
             
         }
 
         #three{
-            grid-column: 2/3;
-            grid-row: 3/4;
+            
             height: 100%;
             display: flex;
             width: 100%;
         }
 
         #four{
-            grid-column: 1/3;
-            grid-row: 4/5;
+            
             height: 100%;
             display: flex;
             width: 100%;
@@ -190,4 +187,21 @@
             }
         }
     }
+}
+
+.react-reveal:nth-of-type(4){
+    grid-row: 3/4;
+    grid-column: 1/3;
+}
+.react-reveal:nth-of-type(3){
+    grid-row: 2/3;
+    grid-column: 2/3;
+}
+.react-reveal:nth-of-type(2){
+    grid-row: 1/2;
+    grid-column: 2/3;
+}
+.react-reveal:nth-of-type(1){
+    grid-row: 1/3;
+    grid-column: 1/2;
 }
